# 8086-disassembler

./: .gitignore  CMakeLists.txt  README.md  instruction.cpp  instruction.h  main.cpp  parse.cpp  parse.h  peeking_iterator.h  stringify.cpp  stringify.h  test.py  types.h
asm/: p10-sub.asm  p11-cmp.asm  p13-jump-labels.asm  p14-data-transfer.asm  p15-arithmetic.asm  p16-logic.asm  p17-string-manipulation.asm  p18-control-transfer.asm  p19-segment-offset-notation.asm  p4-bonus.asm  p5-push.asm  p6-pop.asm  p7-xchg.asm  p8-in-out.asm  p9-add.asm
src/: instruction.h  parse.cpp  parse.h  peeking_iterator.h  types.h
